.metadata/.plugins/org.eclipse.cdt.ui/WordSearch.build.log
20:16:01 **** Incremental Build of configuration Debug for project WordSearch ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\WordSearch.o" "..\\src\\WordSearch.cpp" 
In file included from c:\mingw\include\dirent.h:14:0,
                 from ..\src\FileSystem.h:14,
                 from ..\src\WordSearch.h:18,
                 from ..\src\WordSearch.cpp:20:
c:\mingw\include\io.h:288:14: error: '_off64_t' does not name a type
 __CRT_INLINE _off64_t lseek64 (int, _off64_t, int);
              ^
c:\mingw\include\io.h:289:14: error: '_off64_t' does not name a type
 __CRT_INLINE _off64_t lseek64 (int fd, _off64_t offset, int whence) 
              ^

20:16:02 Build Finished (took 1s.30ms)

